# uav-edge-llm-gateway

./: .gitignore  AUDIT_REPORT.md  LICENSE  README.md  REPAIR_LOG.md  fix_crlf.py  requirements.txt  setup_ubuntu.sh
data/: plot_results.py
ros2_ws/src/drone_safety/: CMakeLists.txt  package.xml
ros2_ws/src/drone_safety/config/: geofence_params.yaml
ros2_ws/src/drone_safety/launch/: benchmark.launch.py  full_system.launch.py  safety_filter.launch  safety_filter.launch.py
ros2_ws/src/drone_safety/scripts/: llm_gateway_node.py
ros2_ws/src/drone_safety/src/: safety_filter.cpp
scripts/: benchmark_pipeline.py
test_venv/: pyvenv.cfg
test_venv/Scripts/: activate  activate.bat
